- added fix for logic, now it is not showing empty duplicates results if there are nothing in the text areas - added Tabs for future pages - added new styles

--- a/materialize.css
+++ b/materialize.css
@@ -4458,7 +4458,7 @@ table span.badge {
 
 nav {
     color: #fff;
-    background-color: #ee6e73;
+    background-color: #695E93;
     width: 100%;
     height: 56px;
     line-height: 56px;
@@ -4522,6 +4522,8 @@ nav .brand-logo {
     display: inline-block;
     font-size: 2.1rem;
     padding: 0;
+    margin-left: 10px;
+    font-family: 'Lobster', cursive;
 }
 
 nav .brand-logo.center {
@@ -4530,11 +4532,12 @@ nav .brand-logo.center {
     transform: translateX(-50%);
 }
 
-@media only screen and (max-width: 992px) {
+@media only screen and (max-width: 375px) {
     nav .brand-logo {
         left: 50%;
         -webkit-transform: translateX(-50%);
         transform: translateX(-50%);
+        font-size: 1.5rem;
     }
 
     nav .brand-logo.left,
@@ -6414,7 +6417,7 @@ input[type='search']:not(.browser-default),
 textarea.materialize-textarea {
     background-color: transparent;
     border: none;
-    border-bottom: 1px solid #9e9e9e;
+    border-bottom: 1px solid #C56FFF;
     border-radius: 0;
     outline: none;
     height: 3rem;
@@ -6504,9 +6507,9 @@ input[type='tel']:not(.browser-default):focus:not([readonly]),
 input[type='number']:not(.browser-default):focus:not([readonly]),
 input[type='search']:not(.browser-default):focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-    border-bottom: 1px solid #26a69a;
-    -webkit-box-shadow: 0 1px 0 0 #26a69a;
-    box-shadow: 0 1px 0 0 #26a69a;
+    border-bottom: 1px solid #7b0dc4;
+    -webkit-box-shadow: 0 1px 0 0 #7b0dc4;
+    box-shadow: 0 1px 0 0 #7b0dc4;
 }
 
 input:not([type]):focus:not([readonly]) + label,
@@ -6522,7 +6525,7 @@ input[type='tel']:not(.browser-default):focus:not([readonly]) + label,
 input[type='number']:not(.browser-default):focus:not([readonly]) + label,
 input[type='search']:not(.browser-default):focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
-    color: #26a69a;
+    color: #7b0dc4;
 }
 
 input:not([type]):focus.valid ~ label,
@@ -6538,7 +6541,7 @@ input[type='tel']:not(.browser-default):focus.valid ~ label,
 input[type='number']:not(.browser-default):focus.valid ~ label,
 input[type='search']:not(.browser-default):focus.valid ~ label,
 textarea.materialize-textarea:focus.valid ~ label {
-    color: #4caf50;
+    color: #7d7098;
 }
 
 input:not([type]):focus.invalid ~ label,
